# vision_yolo_3d_tracker

./: .dockerignore  .gitignore  Dockerfile  README.md  package.xml  setup.cfg  setup.py
config/: detector_params.yaml  tracker_params.yaml  viz_params.yaml
docker/: entrypoint.sh
files/: demo.webm  study_readme.md
launch/: vision_yolo_3d_tracker.launch.py
resource/: vision_yolo_3d_tracker
rviz/: tracking_visualization.rviz
test/: test_copyright.py
vision_yolo_3d_tracker/: __init__.py  kalman_tracker_node.py  utils.py  visualization_node.py  yolo_detector_node.py
